--- a/index.html
+++ b/index.html
@@ -111,6 +111,311 @@
                 </div>
             </div>
         </section>
+        <!-- program section -->
+        <section class="container mx-auto lg:px-20 px-3 py-3 lg:my-10">
+            <hr>
+            <div class="flex flex-col justify-center items-center lg:py-8 py-4 lg:px-24 px-4">
+                <h1 class=" text-xl lg:text-4xl font-bold lg:mb-6 mb-2">Program Sections</h1>
+                <p class="lg:w-1/2 mx-auto text-center">Intense drills, strategic plays, and skill development crucial
+                    for player improvement and team success.</p>
+            </div>
+            <hr class="mb-10">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
+                <div
+                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/2.png)] bg-center bg-cover rounded-xl ">
+                    <div class="flex flex-col justify-end lg:px-10 px-4 lg:pb-7 pb-4 lg:pt-20 pt-8 space-y-4">
+                        <h1 class="text-3xl text-white font-bold">Junior Program</h1>
+                        <p class="text-white">Develop young players' skills, teamwork, and love for the game through
+                            structured training,
+                            mentorship, and competitive play in junior hockey.</p>
+                        <button
+                            class="btn w-1/2 lg:w-1/3 px-4 py-2 bg-red-500 border-none text-white lg:text-lg">Register
+                            Now!</button>
+                    </div>
+                </div>
+                <div
+                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/3.png)] bg-center bg-cover rounded-xl ">
+                    <div class="flex flex-col justify-end lg:px-10 px-4 lg:pb-7 pb-4 lg:pt-20 pt-8 space-y-4">
+                        <h1 class="text-3xl text-white font-bold">Teenager Program</h1>
+                        <p class="text-white">"Empowering teenage athletes through a dynamic hockey program, fostering
+                            skill development, teamwork, and personal growth on and off the ice."</p>
+                        <button
+                            class="btn w-1/2 lg:w-1/3 px-4 py-2 bg-red-500 border-none text-white lg:text-lg">Register
+                            Now!</button>
+                    </div>
+                </div>
+                <div
+                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/4.png)] bg-center bg-cover rounded-xl lg:col-span-2 lg:h-[60vh]">
+                    <div class="flex flex-col justify-end lg:px-10 px-4 lg:pb-10 pb-4 lg:pt-40 pt-8 space-y-4">
+                        <h1 class="text-3xl text-white font-bold">Professional Program</h1>
+                        <p class="text-white lg:w-1/2">Elite training program for hockey professionals, emphasizing
+                            skill development, tactical strategies, and physical conditioning for peak performance on
+                            ice.</p>
+                        <button
+                            class="btn w-1/2 lg:w-1/4 px-4 py-2 bg-red-500 border-none text-white lg:text-lg">Register
+                            Now!</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- our new products -->
+        <section class="container mx-auto lg:px-20 px-3 py-3 lg:my-10">
+            <hr>
+            <div class="flex flex-col justify-center items-center lg:py-8 py-4 lg:px-24 px-4">
+                <h1 class=" text-xl lg:text-4xl font-bold lg:mb-6 mb-2">Our New Products</h1>
+                <p class="lg:w-1/2 mx-auto text-center">Innovative, stylish, and functional, our new products blend
+                    cutting-edge technology with sleek design for an unparalleled user experience.</p>
+            </div>
+            <hr class="mb-10">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
+                    <div class="">
+                        <img class="lg:w-[200px] lg:h-[150px] " src="Images/5.png" />
+                    </div>
+                    <div class="card-body">
+                        <div class="flex space-x-6 ">
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-star-48.png" alt="">
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-eye-50.png" alt="">
+                                <p>20</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-love-48.png" alt="">
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p>Exciting new arrivals: Innovative designs, vibrant colors, and premium quality. </p>
+                        <div class="lg:flex justify-between items-center space-y-2">
+                            <h1 class="text-lg text-red-500 font-bold">Price - $22.00</h1>
+                            <div class="flex justify-center items-center gap-2">
+                                <img class="w-[24px] h-[24px]" src="Images/icons8-buying-50.png" alt="">
+                                <p class="opacity-70">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
+                    <div class="">
+                        <img class="lg:w-[200px] lg:h-[150px] " src="Images/6.png" />
+                    </div>
+                    <div class="card-body">
+                        <div class="flex space-x-6 ">
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-star-48.png" alt="">
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-eye-50.png" alt="">
+                                <p>20</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-love-48.png" alt="">
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p>Exciting new arrivals: Innovative designs, vibrant colors, and premium quality. </p>
+                        <div class="lg:flex justify-between items-center space-y-2">
+                            <h1 class="text-lg text-red-500 font-bold">Price - $22.00</h1>
+                            <div class="flex justify-center items-center gap-2">
+                                <img class="w-[24px] h-[24px]" src="Images/icons8-buying-50.png" alt="">
+                                <p class="opacity-70">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
+                    <div class="">
+                        <img class="lg:w-[200px] lg:h-[150px] " src="Images/7.png" />
+                    </div>
+                    <div class="card-body">
+                        <div class="flex space-x-6 ">
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-star-48.png" alt="">
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-eye-50.png" alt="">
+                                <p>20</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-love-48.png" alt="">
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p>Exciting new arrivals: Innovative designs, vibrant colors, and premium quality. </p>
+                        <div class="lg:flex justify-between items-center space-y-2">
+                            <h1 class="text-lg text-red-500 font-bold">Price - $22.00</h1>
+                            <div class="flex justify-center items-center gap-2">
+                                <img class="w-[24px] h-[24px]" src="Images/icons8-buying-50.png" alt="">
+                                <p class="opacity-70">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
+                    <div class="">
+                        <img class="lg:w-[200px] lg:h-[150px] " src="Images/8.png" />
+                    </div>
+                    <div class="card-body">
+                        <div class="flex space-x-6 ">
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-star-48.png" alt="">
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-eye-50.png" alt="">
+                                <p>20</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-love-48.png" alt="">
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p>Exciting new arrivals: Innovative designs, vibrant colors, and premium quality. </p>
+                        <div class="lg:flex justify-between items-center space-y-2">
+                            <h1 class="text-lg text-red-500 font-bold">Price - $22.00</h1>
+                            <div class="flex justify-center items-center gap-2">
+                                <img class="w-[24px] h-[24px]" src="Images/icons8-buying-50.png" alt="">
+                                <p class="opacity-70">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
+                    <div class="">
+                        <img class="lg:w-[200px] lg:h-[150px] " src="Images/9.png" />
+                    </div>
+                    <div class="card-body">
+                        <div class="flex space-x-6 ">
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-star-48.png" alt="">
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-eye-50.png" alt="">
+                                <p>20</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-love-48.png" alt="">
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p>Exciting new arrivals: Innovative designs, vibrant colors, and premium quality. </p>
+                        <div class="lg:flex justify-between items-center space-y-2">
+                            <h1 class="text-lg text-red-500 font-bold">Price - $22.00</h1>
+                            <div class="flex justify-center items-center gap-2">
+                                <img class="w-[24px] h-[24px]" src="Images/icons8-buying-50.png" alt="">
+                                <p class="opacity-70">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
+                    <div class="">
+                        <img class="lg:w-[200px] lg:h-[150px] " src="Images/10.png" />
+                    </div>
+                    <div class="card-body">
+                        <div class="flex space-x-6 ">
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-star-48.png" alt="">
+                                <p>5.0</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-eye-50.png" alt="">
+                                <p>20</p>
+                            </div>
+                            <div class="flex justify-center items-center gap-1">
+                                <img class="w-[19px] h-[19px]" src="Images/icons8-love-48.png" alt="">
+                                <p>200</p>
+                            </div>
+                        </div>
+                        <h2 class="card-title">World Cup Flags Football</h2>
+                        <p>Exciting new arrivals: Innovative designs, vibrant colors, and premium quality. </p>
+                        <div class="lg:flex justify-between items-center space-y-2">
+                            <h1 class="text-lg text-red-500 font-bold">Price - $22.00</h1>
+                            <div class="flex justify-center items-center gap-2">
+                                <img class="w-[24px] h-[24px]" src="Images/icons8-buying-50.png" alt="">
+                                <p class="opacity-70">Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- clients question -->
+        <section class="container mx-auto lg:px-20 px-3 py-3 lg:my-10">
+            <hr>
+            <div class="flex flex-col justify-center items-center lg:py-8 py-4 lg:px-24 px-4">
+                <h1 class=" text-xl lg:text-4xl font-bold lg:mb-6 mb-2">Clients Question</h1>
+                <p class="lg:w-1/2 mx-auto text-center">A dedicated space for inquiries, providing clarity, guidance,
+                    and personalized responses to enhance customer satisfaction.</p>
+            </div>
+            <hr class="mb-10">
+            <div class="lg:flex  items-center gap-10  border-2 rounded-lg p-6">
+                <div>
+                    <img src="Images/11.png" alt="">
+                </div>
+                <div>
+                    <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          Our Equipment
+                        </div>
+                        <div class="collapse-content "> 
+                          <p>Cutting-edge equipment, ensuring precision and efficiency, engineered for optimal performance in diverse applications, setting new industry standards.</p>
+                        </div>
+                        <hr>
+                      </div>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                          Hockey Training
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Intense drills, precision passes, and relentless skating; hockey training cultivates teamwork, skill, and endurance for competitive on-ice excellence.</p>
+                        </div>
+                    </div>
+                      <hr>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Ski Touring
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and skill development in a private lesson setting.</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Booking
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and skill development in a private lesson setting.</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            Pricings
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and skill development in a private lesson setting.</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
