--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <hr class="mb-10">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-5">
                 <div
-                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/2.png)] bg-center bg-cover rounded-xl ">
+                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./Images/2.png)] bg-center bg-cover rounded-xl ">
                     <div class="flex flex-col justify-end lg:px-10 px-4 lg:pb-7 pb-4 lg:pt-20 pt-8 space-y-4">
                         <h1 class="text-3xl text-white font-bold">Junior Program</h1>
                         <p class="text-white">Develop young players' skills, teamwork, and love for the game through
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div
-                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/3.png)] bg-center bg-cover rounded-xl ">
+                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./Images/3.png)] bg-center bg-cover rounded-xl ">
                     <div class="flex flex-col justify-end lg:px-10 px-4 lg:pb-7 pb-4 lg:pt-20 pt-8 space-y-4">
                         <h1 class="text-3xl text-white font-bold">Teenager Program</h1>
                         <p class="text-white">"Empowering teenage athletes through a dynamic hockey program, fostering
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div
-                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/4.png)] bg-center bg-cover rounded-xl lg:col-span-2 lg:h-[60vh]">
+                    class="bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./Images/4.png)] bg-center bg-cover rounded-xl lg:col-span-2 lg:h-[60vh]">
                     <div class="flex flex-col justify-end lg:px-10 px-4 lg:pb-10 pb-4 lg:pt-40 pt-8 space-y-4">
                         <h1 class="text-3xl text-white font-bold">Professional Program</h1>
                         <p class="text-white lg:w-1/2">Elite training program for hockey professionals, emphasizing
