--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <hr class="mb-10">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
                 <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
-                    <div class="">
+                    <div class="mt-4 lg:mt-0">
                         <img class="lg:w-[200px] lg:h-[150px] " src="Images/5.png" />
                     </div>
                     <div class="card-body">
@@ -198,8 +198,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
-                    <div class="">
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6 ">
+                    <div class="mt-4 lg:mt-0">
                         <img class="lg:w-[200px] lg:h-[150px] " src="Images/6.png" />
                     </div>
                     <div class="card-body">
@@ -228,8 +228,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
-                    <div class="">
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6 ">
+                    <div class="mt-4 lg:mt-0">
                         <img class="lg:w-[200px] lg:h-[150px] " src="Images/7.png" />
                     </div>
                     <div class="card-body">
@@ -258,8 +258,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
-                    <div class="">
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6 ">
+                    <div class="mt-4 lg:mt-0">
                         <img class="lg:w-[200px] lg:h-[150px] " src="Images/8.png" />
                     </div>
                     <div class="card-body">
@@ -288,8 +288,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
-                    <div class="">
+                <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6 ">
+                    <div class="mt-4 lg:mt-0">
                         <img class="lg:w-[200px] lg:h-[150px] " src="Images/9.png" />
                     </div>
                     <div class="card-body">
@@ -319,7 +319,7 @@
                     </div>
                 </div>
                 <div class="card  lg:card-side bg-base-100 shadow-xl flex justify-center items-center lg:pl-6">
-                    <div class="">
+                    <div class="mt-4 lg:mt-0">
                         <img class="lg:w-[200px] lg:h-[150px] " src="Images/10.png" />
                     </div>
                     <div class="card-body">
@@ -365,60 +365,178 @@
                 </div>
                 <div>
                     <div class="collapse collapse-plus ">
-                        <input type="radio" name="my-accordion-3" checked="checked" /> 
+                        <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">
-                          Our Equipment
+                            Our Equipment
                         </div>
-                        <div class="collapse-content "> 
-                          <p>Cutting-edge equipment, ensuring precision and efficiency, engineered for optimal performance in diverse applications, setting new industry standards.</p>
+                        <div class="collapse-content ">
+                            <p>Cutting-edge equipment, ensuring precision and efficiency, engineered for optimal
+                                performance in diverse applications, setting new industry standards.</p>
                         </div>
                         <hr>
-                      </div>
-                      <div class="collapse collapse-plus ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    </div>
+                    <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
-                          Hockey Training
+                            Hockey Training
                         </div>
-                        <div class="collapse-content"> 
-                          <p>Intense drills, precision passes, and relentless skating; hockey training cultivates teamwork, skill, and endurance for competitive on-ice excellence.</p>
+                        <div class="collapse-content">
+                            <p>Intense drills, precision passes, and relentless skating; hockey training cultivates
+                                teamwork, skill, and endurance for competitive on-ice excellence.</p>
                         </div>
                     </div>
-                      <hr>
-                      <div class="collapse collapse-plus ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    <hr>
+                    <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
                             Ski Touring
                         </div>
-                        <div class="collapse-content"> 
-                          <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and skill development in a private lesson setting.</p>
+                        <div class="collapse-content">
+                            <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and
+                                skill development in a private lesson setting.</p>
                         </div>
-                      </div>
-                      <hr>
-                      <div class="collapse collapse-plus ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    </div>
+                    <hr>
+                    <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
                             Booking
                         </div>
-                        <div class="collapse-content"> 
-                          <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and skill development in a private lesson setting.</p>
+                        <div class="collapse-content">
+                            <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and
+                                skill development in a private lesson setting.</p>
                         </div>
-                      </div>
-                      <hr>
-                      <div class="collapse collapse-plus ">
-                        <input type="radio" name="my-accordion-3" /> 
+                    </div>
+                    <hr>
+                    <div class="collapse collapse-plus ">
+                        <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">
                             Pricings
                         </div>
-                        <div class="collapse-content"> 
-                          <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and skill development in a private lesson setting.</p>
+                        <div class="collapse-content">
+                            <p>One-on-one personalized instruction, tailored to individual needs, enhancing learning and
+                                skill development in a private lesson setting.</p>
                         </div>
-                      </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- get in touch section -->
+        <section class="container mx-auto lg:px-20 px-3 py-3 lg:my-10">
+            <hr>
+            <div class="flex flex-col justify-center items-center lg:py-8 py-4 lg:px-24 px-4">
+                <h1 class=" text-xl lg:text-4xl font-bold lg:mb-6 mb-2">Get In Touch</h1>
+                <p class="lg:w-1/2 mx-auto text-center">"Contact us for inquiries, collaborations, or questions. We're
+                    here to help!"</p>
+            </div>
+            <hr class="mb-10">
+            <div class="grid grid-cols-1 lg:grid-cols-3 space-x-5">
+                <div class="row-span-3 gap-4 border-2 rounded-lg">
+                    <div class="space-y-4 p-4">
+                        <div class="flex flex-col text-left lg:p-8 p-4 border-2 rounded-lg bg-cyan-50 ">
+                            <img class="w-[22px] h-[22px] mb-6" src="Images/Group 1171275317.png" alt="">
+                            <p>Phone Number</p>
+                            <h1 class="text-lg font-bold">01822353293</h1>
+                        </div>
+                        <div class="flex flex-col text-left lg:p-8 p-4 border-2 rounded-lg bg-cyan-50  ">
+                            <img class="w-[22px] h-[22px] mb-6" src="Images/Group 1171275318.png" alt="">
+                            <p>Email : </p>
+                            <h1 class="text-lg font-bold">
+                                hockeys@support.com</h1>
+                        </div>
+                        <div class="flex flex-col text-left lg:p-8 p-4 border-2 rounded-lg bg-cyan-50  ">
+                            <img class="w-[22px] h-[22px] mb-6" src="Images/Group 1171275321.png" alt="">
+                            <p>Location</p>
+                            <h1 class="text-lg font-bold">Location :
+                                152/1 Mohakhali Wireless Gate</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-span-2">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 ">
+                        <div class="flex flex-col">
+                            <label class="text-lg font-semibold" for="Your Name">Your Name</label>
+                            <input type="text" placeholder="Enter Your Name" class="input input-bordered w-full  mt-2
+                            bg-slate-100" />
+                        </div>
+                        <div class="flex flex-col">
+                            <label class="text-lg font-semibold" for="Your Name">Your Email</label>
+                            <input type="text" placeholder="Enter Your Email" class="input input-bordered w-full mt-2
+                            bg-slate-100" />
+                        </div>
+                        <div class="flex flex-col">
+                            <label class="text-lg font-semibold" for="Your Name">Subject</label>
+                            <input type="text" placeholder="Enter Your Subject" class="input input-bordered w-full mt-2
+                            bg-slate-100" />
+                        </div>
+                        <div class="flex flex-col">
+                            <label class="text-lg font-semibold" for="Your Name">Phone Number</label>
+                            <input type="text" placeholder="Enter Your Phone Number" class="input input-bordered w-full mt-2
+                            bg-slate-100" />
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <label class="text-lg font-semibold" for="">Your Massege</label>
+                        <textarea class="textarea textarea-bordered w-full mt-2" placeholder="Write Your Massege"
+                            rows="5"></textarea>
+                    </div>
+                    <button class="btn lg:w-full bg-red-500 mt-3 text-white">Send Massege</button>
+                </div>
+            </div>
+            <div class="flex flex-col space-y-4 justify-center items-center bg-slate-50 p-6 mt-8">
+                <h1 class="text-4xl font-bold">Social Media</h1>
+                <div class="flex justify-center items-center space-x-3">
+                    <img src="Images/icons8-fb-30.png" alt="">
+                    <img src="Images/icons8-linkedin-30.png" alt="">
+                    <img src="Images/icons8-twitter-30.png" alt="">
+                    <img class="w-[32px] h-[32px]" src="Images/icons8-instagram-50.png" alt="">
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="">
+        <div class=" grid grid-cols-1 lg:grid-cols-3 p-6 lg:py-16 lg:px-24  gap-5 bg-black ">
+            <div class="items-center text-center flex flex-col">
+                <h1 class=" text-xl lg:text-4xl font-bold lg:mb-4 mb-2 text-white">Get In Touch</h1>
+                <p>"Contact us for inquiries, collaborations, or questions. We're
+                    here to help!"</p>
+                <div class="flex gap-4 items-center mt-4">
+                    <img class="w-[20px] h-[20px]" src="Images/icons8-email-48.png" alt="">
+                    <p class=" text-base">hockeys@support.com</p>
+                </div>
+                <div class="flex gap-4 items-center ">
+                    <img class="w-[20px] h-[20px]" src="Images/Group 1171275317.png" alt="">
+                    <p class=" text-base">01822353293</p>
+                </div>
+            </div>
+            <div class="col-span-2">
+                <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 ">
+                    <nav class="flex flex-col items-center text-center mt-3 space-y-2">
+                        <h6 class=" text-white mb-3">Company</h6>
+                        <a class="link link-hover">About Us</a>
+                        <a class="link link-hover">Leadership</a>
+                        <a class="link link-hover">Careers</a>
+                        <a class="link link-hover">News & Article</a>
+                        <a class="link link-hover">Legal Notice</a>
+                    </nav>
+                    <nav class="flex flex-col items-center text-center mt-3 space-y-2">
+                        <h6 class=" text-white mb-3">Support</h6>
+                        <a class="link link-hover">Help Center</a>
+                        <a class="link link-hover">FAQ</a>
+                        <a class="link link-hover">Ticket Support</a>
+                        <a class="link link-hover">Contuct Us</a>
+                    </nav>
+                    <nav class="flex flex-col items-center text-center mt-3 space-y-2">
+                        <h6 class=" text-white mb-3">Services</h6>
+                        <a class="link link-hover">Academy</a>
+                        <a class="link link-hover">Group Lession</a>
+                        <a class="link link-hover">Private Lession</a>
+                        <a class="link link-hover">Hockeys For Kids</a>
+                        <a class="link link-hover">Hockeys For Adult</a>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 
